--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,41 @@
-<ul>
-{{#each  }}
-  <li>{{burgers}}</li>
-{{/each}}
-</ul>
+<header>
+<img src="https://i.imgur.com/zL3wr7z.png" id="pic">
+<div>Eat-Da-Burger</div>
+</header>
 
-<h2>Add a Burger</h2>
+<div class="grid-container">
+<div class="grid-item" id="first">
+<p>Burgers Left to Devour:</p>
+<ul>
+  {{#each burgers}}
+    {{#unless devoured}}
+    {{/unless}}
+  {{/each}}
+</ul>
+</div>
+
+<div class="grid-item" id="second">
+<p>Add a Burger</p>
 <form class="create-form">
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
-  </div>
+
   <button type="submit">Add Burger</button>
 </form>
+</div>
+</div>
+
+<div class="grid-item" id="third">
+<p>Devoured Burgers:</p>
+
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+    {{/if}}
+  {{/each}}
+</ul>
+</div>
+
+</div>
