--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,10 @@
 body{
     background-image: url("https://i.imgur.com/S54uBf7.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    margin: 2rem auto;
+    width: 95%;
+    font-family: 'Lato', sans-serif;
+
 }
 
 #pic {
@@ -11,14 +14,17 @@ body{
 
 header {
     text-align: center;
-    font-size: 40px;
+    font-size: 45px;
     color: white;
+
 }
 
 #first {
     color: white;
     grid-column: 1 / 2;
     text-align: center;
+    font-size: 30px;
+
 
 }
 
@@ -26,6 +32,9 @@ header {
     color: white;
     grid-column: 3 / 4;
     text-align: center;
+    font-size: 30px;
+
+
 
 }
 
@@ -33,6 +42,9 @@ header {
     color: white;
     grid-column: 5 / 6;
     text-align: center;
+    font-size: 30px;
+
+
 }
 
 
@@ -41,4 +53,20 @@ header {
     grid-template-columns: auto auto auto auto;
     grid-gap: 10px;
     padding: 10px;
+    
+  }
+
+  @media screen and (max-width: 40em) {
+    #first {
+      grid-gap: 2px;
+      font-size: 15px;
+    }
+    #second {
+        grid-gap: 2px;
+        font-size: 15px;
+      }
+      #third {
+        grid-gap: 2px;
+        font-size: 15px;
+      }
   }
