--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,9 @@
 		<title>Eat-Da-Burgers</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/models/burger.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
 	</head>
 	<body>
 		{{{ body }}}
