--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -23,7 +23,7 @@ header {
     color: white;
     grid-column: 1 / 2;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
 
 
 }
@@ -32,7 +32,7 @@ header {
     color: white;
     grid-column: 3 / 4;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
 
 
 
@@ -42,17 +42,23 @@ header {
     color: white;
     grid-column: 5 / 6;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
 
 
 }
 
+#buttonStyle {
+    background-color: #5dc092;
+    border-radius: 15px;
+    border: 1px solid white; /* Green */
+
+}
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-gap: 10px;
-    padding: 10px;
+ 
     
   }
 
@@ -69,4 +75,7 @@ header {
         grid-gap: 2px;
         font-size: 15px;
       }
+      .button {
+        background-color: white;
+    }
   }
