--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,8 @@
     {{#unless this.devoured}}
     <ul>
         {{this.name}}
-        <form action="/{{this.id}}?_method=PUT" method="POST">
+        <form action="/{{this.id}}" method="POST">
+        <input type="hidden" name="_METHOD" value="PUT">
 		<input type="hidden" name="devoured" value="true">
 		<button id="buttonStyle" type="submit">Devour!</button>
 		</form>
@@ -27,6 +28,7 @@
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
+    <input type="hidden" name="devoured" value="false">
     <input type="text" id="ca" name="name">
 
   <button id="buttonStyle" type="submit">Add Burger</button>
